Update ServiceServiceImpl.java
new code